--- a/style.css
+++ b/style.css
@@ -67,6 +67,12 @@ h2 {
   color: white;
 }
 
+.btn:active {
+  background-color: #333;
+  color: white;
+  transform: translateY(4px);
+}
+
 .numbers {
   background: ;
 }
